--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </svg>
       </a>
     </div>
-    <h1 class="title">
+   <h1 class="title">
       <span class="h1_line first">BE RECRUITED</span>
       <span class="h1_line second">PLAY COLLEGE SPORTS</span>
     </h1>
@@ -48,13 +48,29 @@
   </header>
 
   <main class="main">
+
     <section class="section_athlets">
       <h2 class="header_athlets">athlets</h2>
-      <div class="box_img_team_players">
-        <img class="img_team_players" src="images/footballer_192.png">
+      <div class="box_img_team_players box_img_athlets">
+        <picture class="picture">
+          <source 
+            media="(max-width: 640px)"
+            srcset="images/footballer_192.png">
+          <source 
+            media="(min-width: 641px)"
+            srcset="images/footballer_497.png">
+          <source
+            media="(min-width: 961px)"
+            srcset="images/footballer_566.png">
+          <img class="img_team_players"
+          src="images/footballer_497.png"
+          alt="american football player">
+        </picture>
       </div>
-      <article class="article_connection">
-        <div class="box_article">
+      <div class="box_for_article box_for_article_athlets">
+        <h2 class="header_athlets_inside header_athlets_inside_right">athlets</h2>
+        <article class="article_connection">
+        <div class="box_article box_article_athlets">
           <div class="box_header">
             <div class="box_number">            
               <span class="number">01</span>
@@ -69,9 +85,9 @@
             </p>
           </div>
         </div>
-      </article>
-      <article class="article_collaboration">
-        <div class="box_article">
+        </article>
+        <article class="article_collaboration">
+        <div class="box_article box_article_athlets">
           <div class="box_header">
             <div class="box_number">            
               <span class="number">02</span>
@@ -84,13 +100,13 @@
             <p>
                 Work with other student athletes to  increase visability. 
                 When you share and like other players videos it will increase your visability as a player. 
-                This is the team work aspect to Surface 1.
+                This is the team work aspect to Surface1.
             </p>
           </div>
         </div>
-      </article>
-      <article class="article_growth">
-        <div class="box_article">
+        </article>
+        <article class="article_growth">
+        <div class="box_article box_article_athlets">
           <div class="box_header">
             <div class="box_number">            
               <span class="number number_light_line">03</span>
@@ -106,15 +122,31 @@
             </p>
           </div>
         </div>
-      </article>
+        </article>
+      </div>
     </section>
 
     <section class="section_players">
       <h2 class="header_athlets">players</h2>
       <div class="box_img_team_players">
-        <img class="img_team_players" src="images/basketballer_302.png"/>
+        <picture class="picture">
+          <source 
+            media="(max-width: 640px)"
+            srcset="images/basketballer_302.png">
+          <source 
+            media="(min-width: 641px)"
+            srcset="images/basketballer_436.png">
+          <source
+            media="(min-width: 961px)"
+            srcset="images/">
+          <img class="img_team_players"
+          src="images/basketballer_991.png"
+          alt="basketball player with a ball">
+        </picture>
       </div>
-      <article class="article_connection">
+      <div class="box_for_article">
+        <h2 class="header_athlets_inside">players</h2>
+        <article class="article_connection">
         <div class="box_article">
           <div class="box_header">
             <div class="box_number">            
@@ -131,8 +163,8 @@
             </p>
           </div>
         </div>
-      </article>
-      <article class="article_collaboration">
+        </article>
+        <article class="article_collaboration">
         <div class="box_article">
           <div class="box_header">
             <div class="box_number">            
@@ -148,8 +180,8 @@
             </p>
           </div>
         </div>
-      </article>
-      <article class="article_growth article_growth_dark">
+        </article>
+        <article class="article_growth article_growth_dark">
         <div class="box_article">
           <div class="box_header">
             <div class="box_number">            
@@ -165,13 +197,27 @@
             </p>
           </div>
         </div>
-      </article>
+        </article>
+      </div>
     </section>
 
     <section>
       <article class="article_big article_be_active">
         <div class="box_picture_number">
-          <img class="picture" src="images/be-active_640.jpg" alt="african american guy with phone">
+          <picture class="picture">
+            <source 
+              media="(max-width: 640px)"
+              srcset="images/be-active_640.jpg">
+            <source 
+              media="(min-width: 641px)"
+              srcset="images/be-active_960.jpg">
+            <source
+              media="(min-width: 961px)"
+              srcset="images/be-active_1024.jpg">
+            <img class="picture"
+            src="images/be-active.jpg"
+            alt="african american guy with phone">
+          </picture>
           <div class="box_number_square"> 
               <div class="box_number box_number_span">          
                 <span class="number number_squared number_light_line bright_number">01</span>
@@ -184,7 +230,7 @@
                 Be active
               </h2>
             </div>
-            <div class="content_basic">
+            <div class="content_basic content_basic_big">
               <p>
                 Post videos with your skills, Like and follow others to be more popular.
               </p>
@@ -194,7 +240,20 @@
 
       <article class="article_big article_find_contact">
         <div class="box_picture_number">
-          <img class="picture" src="images/find-contact_640.jpg" alt="a man in headphones and an athlete looked at the phone">
+          <picture class="picture">
+            <source 
+              media="(max-width: 640px)"
+              srcset="images/find-contact_640.jpg">
+            <source 
+              media="(min-width: 641px)"
+              srcset="images/find-contact_960.jpg">
+            <source
+              media="(min-width: 961px)"
+              srcset="images/find-contact_1024.jpg">
+            <img class="picture"
+            src="images/find-contact.jpg"
+            alt="a man in headphones and an athlete looked at the phone">
+          </picture>
           <div class="box_number_square"> 
               <div class="box_number box_number_span">          
                 <span class="number number_squared number_light_line bright_number">02</span>
@@ -207,7 +266,7 @@
                 find contact
               </h2>
             </div>
-            <div class="content_basic">
+            <div class="content_basic content_basic_big">
               <p>
                 Contact others to find right coach or athlete you are looking for.
               </p>
@@ -217,7 +276,20 @@
 
       <article class="article_big article_work it">
         <div class="box_picture_number">
-          <img class="picture" src="images/work-it_640.jpg" alt="smiling students athletes in team uniform">
+          <picture class="picture">
+            <source 
+              media="(max-width: 640px)"
+              srcset="images/work-it_640.jpg">
+            <source 
+              media="(min-width: 641px)"
+              srcset="images/work-it_960.jpg">
+            <source
+              media="(min-width: 961px)"
+              srcset="images/work-it_1024.jpg">
+            <img class="picture"
+            src="images/work-it.jpg"
+            alt="smiling students athletes in team uniform">
+          </picture>
           <div class="box_number_square"> 
               <div class="box_number box_number_span">          
                 <span class="number number_squared number_light_line bright_number">03</span>
@@ -230,7 +302,7 @@
                 WORK IT
               </h2>
             </div>
-            <div class="content_basic">
+            <div class="content_basic content_basic_big">
               <p>
                 Enjoy being a student athlete, the recruiting process can be overwhelming, 
                 we want to make this enjoyable experience.
@@ -239,6 +311,7 @@
           </div>
       </article>
     </section>
+
   </main>
    
   <footer class="footer">
