обновленная версия диплома_итог

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       </a>
     </div>
    <h1 class="title">
-      <span class="h1_line first">BE RECRUITED</span>
-      <span class="h1_line second">PLAY COLLEGE SPORTS</span>
+      <span class="header_line header_line_first">BE RECRUITED</span>
+      <span class="header_line header_line_second">PLAY COLLEGE SPORTS</span>
     </h1>
     <div class="box_for_buttons">  
-      <a class="link_button">
+      <a class="link_button link_button_margin">
         <svg class="button_svg app_store" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170 170">
             <path d="M150.37 130.25c-2.45 5.66-5.35 10.87-8.71 15.66-4.58 6.53-8.33 11.05-11.22 13.56-4.48 4.12-9.28 6.23-14.42 6.35-3.69 0-8.14-1.05-13.32-3.18-5.197-2.12-9.973-3.17-14.34-3.17-4.58 0-9.492 1.05-14.746 3.17-5.262 2.13-9.5 3.24-12.742 3.35-4.93.21-9.842-1.96-14.746-6.52-3.13-2.73-7.045-7.41-11.735-14.04-5.03-7.08-9.168-15.29-12.41-24.65-3.47-10.11-5.21-19.9-5.21-29.378 0-10.857 2.346-20.22 7.045-28.068C27.508 57.03 32.42 52.06 38.57 48.41s12.793-5.51 19.948-5.63c3.915 0 9.05 1.21 15.43 3.59 6.36 2.39 10.446 3.6 12.237 3.6 1.34 0 5.877-1.416 13.57-4.24 7.275-2.617 13.415-3.7 18.445-3.274 13.63 1.1 23.87 6.473 30.68 16.153-12.19 7.385-18.22 17.73-18.1 31 .11 10.338 3.86 18.94 11.23 25.77 3.34 3.17 7.07 5.62 11.22 7.36-.9 2.61-1.85 5.11-2.86 7.51zM119.11 7.24c0 8.102-2.96 15.667-8.86 22.67-7.12 8.323-15.732 13.133-25.07 12.374-.12-.972-.19-1.995-.19-3.07 0-7.778 3.387-16.102 9.4-22.908 3.002-3.446 6.82-6.31 11.45-8.597 4.62-2.253 8.99-3.498 13.1-3.71.12 1.082.17 2.165.17 3.24z"/>
         </svg>
@@ -57,97 +57,97 @@
             media="(max-width: 640px)"
             srcset="images/footballer_192.png">
           <source 
-            media="(min-width: 641px)"
+            media="(max-width: 960px)"
             srcset="images/footballer_497.png">
           <source
             media="(min-width: 961px)"
             srcset="images/footballer_566.png">
-          <img class="img_team_players"
-          src="images/footballer_497.png"
+          <img class="img_team_players img_team_players_athlets"
+          src="images/footballer_497_img.png"
           alt="american football player">
         </picture>
       </div>
       <div class="box_for_article box_for_article_athlets">
         <h2 class="header_athlets_inside header_athlets_inside_right">athlets</h2>
         <article class="article_connection">
-        <div class="box_article box_article_athlets">
-          <div class="box_header">
+          <div class="box_article box_article_athlets">
+            <div class="box_header">
             <div class="box_number">            
               <span class="number">01</span>
             </div>
             <h3 class="header_article">
               Connection
             </h3>
-          </div>
-          <div class="content_basic">
+            </div>
+            <div class="content_basic">
             <p>
               Connect with coaches directly, you can ping coaches to view profile.
             </p>
+            </div>
           </div>
-        </div>
         </article>
         <article class="article_collaboration">
-        <div class="box_article box_article_athlets">
-          <div class="box_header">
-            <div class="box_number">            
-              <span class="number">02</span>
-            </div>
-            <h3 class="header_article">
+          <div class="box_article box_article_athlets">
+            <div class="box_header">
+              <div class="box_number">            
+                <span class="number">02</span>
+              </div>
+              <h3 class="header_article">
               Collaboration
-            </h3>
-          </div>
-          <div class="content_basic">
+              </h3>
+            </div>
+            <div class="content_basic">
             <p>
                 Work with other student athletes to  increase visability. 
                 When you share and like other players videos it will increase your visability as a player. 
                 This is the team work aspect to Surface1.
             </p>
+            </div>
           </div>
-        </div>
         </article>
         <article class="article_growth">
-        <div class="box_article box_article_athlets">
-          <div class="box_header">
+            <div class="box_article box_article_athlets">
+            <div class="box_header">
             <div class="box_number">            
               <span class="number number_light_line">03</span>
             </div>
             <h3 class="header_article">
               Growth
             </h3>
-          </div>
-          <div class="content_basic content_growth">
+            </div>
+            <div class="content_basic content_growth">
             <p>
               Resources and tools for you to get better as a student Athelte. 
               Access to training classes, tutor sessions, etc
             </p>
+            </div>
           </div>
-        </div>
         </article>
       </div>
     </section>
 
     <section class="section_players">
       <h2 class="header_athlets">players</h2>
-      <div class="box_img_team_players">
+      <div class="box_img_team_players box_img_players">
         <picture class="picture">
           <source 
             media="(max-width: 640px)"
             srcset="images/basketballer_302.png">
           <source 
-            media="(min-width: 641px)"
+            media="(max-width: 960px)"
             srcset="images/basketballer_436.png">
           <source
             media="(min-width: 961px)"
-            srcset="images/">
-          <img class="img_team_players"
-          src="images/basketballer_991.png"
+            srcset="images/basketballer_991.png">
+          <img class="img_team_players img_team_players_basketballer"
+          src="images/basketballer_436_img.png"
           alt="basketball player with a ball">
         </picture>
       </div>
       <div class="box_for_article">
-        <h2 class="header_athlets_inside">players</h2>
+        <h2 class="header_athlets_inside header_athlets_inside_left">players</h2>
         <article class="article_connection">
-        <div class="box_article">
+        <div class="box_article box_article_players">
           <div class="box_header">
             <div class="box_number">            
               <span class="number">01</span>
@@ -165,7 +165,7 @@
         </div>
         </article>
         <article class="article_collaboration">
-        <div class="box_article">
+        <div class="box_article box_article_players">
           <div class="box_header">
             <div class="box_number">            
               <span class="number">02</span>
@@ -182,7 +182,7 @@
         </div>
         </article>
         <article class="article_growth article_growth_dark">
-        <div class="box_article">
+        <div class="box_article box_article_players">
           <div class="box_header">
             <div class="box_number">            
               <span class="number number_light_line number_for_the_dark">03</span>
@@ -204,12 +204,12 @@
     <section>
       <article class="article_big article_be_active">
         <div class="box_picture_number">
-          <picture class="picture">
+          <picture>
             <source 
               media="(max-width: 640px)"
               srcset="images/be-active_640.jpg">
             <source 
-              media="(min-width: 641px)"
+              media="(max-width: 960px)"
               srcset="images/be-active_960.jpg">
             <source
               media="(min-width: 961px)"
@@ -224,7 +224,7 @@
               </div>
           </div>
         </div>
-          <div class="header_and_paragraf">
+        <div class="header_and_paragraf">
             <div class="box_header">
               <h2 class="header_article header_article_of_individual">
                 Be active
@@ -235,17 +235,17 @@
                 Post videos with your skills, Like and follow others to be more popular.
               </p>
             </div>
-          </div>
+        </div>
       </article>
 
       <article class="article_big article_find_contact">
-        <div class="box_picture_number">
-          <picture class="picture">
+        <div class="box_picture_number box_picture_number_changes">
+          <picture>
             <source 
               media="(max-width: 640px)"
               srcset="images/find-contact_640.jpg">
             <source 
-              media="(min-width: 641px)"
+              media="(max-width: 960px)"
               srcset="images/find-contact_960.jpg">
             <source
               media="(min-width: 961px)"
@@ -254,13 +254,13 @@
             src="images/find-contact.jpg"
             alt="a man in headphones and an athlete looked at the phone">
           </picture>
-          <div class="box_number_square"> 
+          <div class="box_number_square box_number_square_changes"> 
               <div class="box_number box_number_span">          
                 <span class="number number_squared number_light_line bright_number">02</span>
               </div>
           </div>
         </div>
-          <div class="header_and_paragraf">
+        <div class="header_and_paragraf header_and_paragraf_changes">
             <div class="box_header">
               <h2 class="header_article header_article_of_individual">
                 find contact
@@ -271,17 +271,17 @@
                 Contact others to find right coach or athlete you are looking for.
               </p>
             </div>
-          </div>
+        </div>
       </article>
 
       <article class="article_big article_work it">
         <div class="box_picture_number">
-          <picture class="picture">
+          <picture>
             <source 
               media="(max-width: 640px)"
               srcset="images/work-it_640.jpg">
             <source 
-              media="(min-width: 641px)"
+              media="(max-width: 960px)"
               srcset="images/work-it_960.jpg">
             <source
               media="(min-width: 961px)"
@@ -296,7 +296,7 @@
               </div>
           </div>
         </div>
-          <div class="header_and_paragraf">
+        <div class="header_and_paragraf">
             <div class="box_header">
               <h2 class="header_article header_article_of_individual">
                 WORK IT
@@ -308,27 +308,29 @@
                 we want to make this enjoyable experience.
               </p>
             </div>
-          </div>
+        </div>
       </article>
     </section>
 
   </main>
    
   <footer class="footer">
-    <a class="link_surface"> 
+    <div class="logo_header">
+      <a class="link_surface"> 
       <svg class="svg_link_surface" viewBox="0 0 288 264" xmlns="http://www.w3.org/2000/svg">
         <g fill-rule="evenodd">
           <path d="M115.5 36.848v190.304L253.03 132 115.5 36.848zM282.112 142.28l-172 119c-8.29 5.736-19.612-.198-19.612-10.28V13c0-10.082 11.321-16.016 19.612-10.28l172 119c7.184 4.97 7.184 15.59 0 20.56z" fill-rule="nonzero"/>
           <path d="M42.5 107h107a8 8 0 1 0 0-16h-107a8 8 0 1 0 0 16zm0 70h107a8 8 0 1 0 0-16h-107a8 8 0 1 0 0 16zM8 143h168a8 8 0 1 0 0-16H8a8 8 0 1 0 0 16z" fill-rule="nonzero" stroke-linecap="round" stroke-linejoin="round"/>
         </g>
       </svg>
-    </a>
-    <h2 class="footer_title">
-      <span class="h2_line_first">download app</span>
-      <span class="h2_line_second">Show everyone what you can do!</span>
-    </h2>
+      </a>
+      <h2 class="footer_title">
+      <span class="footer_header_line_first">download app</span>
+      <span class="footer_header_line_second">Show everyone what you can do!</span>
+      </h2>
+    </div>
     <div class="box_for_buttons box_links">  
-      <a class="link_button"> 
+      <a class="link_button link_button_margin"> 
         <svg class="button_svg app_store" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170 170">
             <path d="M150.37 130.25c-2.45 5.66-5.35 10.87-8.71 15.66-4.58 6.53-8.33 11.05-11.22 13.56-4.48 4.12-9.28 6.23-14.42 6.35-3.69 0-8.14-1.05-13.32-3.18-5.197-2.12-9.973-3.17-14.34-3.17-4.58 0-9.492 1.05-14.746 3.17-5.262 2.13-9.5 3.24-12.742 3.35-4.93.21-9.842-1.96-14.746-6.52-3.13-2.73-7.045-7.41-11.735-14.04-5.03-7.08-9.168-15.29-12.41-24.65-3.47-10.11-5.21-19.9-5.21-29.378 0-10.857 2.346-20.22 7.045-28.068C27.508 57.03 32.42 52.06 38.57 48.41s12.793-5.51 19.948-5.63c3.915 0 9.05 1.21 15.43 3.59 6.36 2.39 10.446 3.6 12.237 3.6 1.34 0 5.877-1.416 13.57-4.24 7.275-2.617 13.415-3.7 18.445-3.274 13.63 1.1 23.87 6.473 30.68 16.153-12.19 7.385-18.22 17.73-18.1 31 .11 10.338 3.86 18.94 11.23 25.77 3.34 3.17 7.07 5.62 11.22 7.36-.9 2.61-1.85 5.11-2.86 7.51zM119.11 7.24c0 8.102-2.96 15.667-8.86 22.67-7.12 8.323-15.732 13.133-25.07 12.374-.12-.972-.19-1.995-.19-3.07 0-7.778 3.387-16.102 9.4-22.908 3.002-3.446 6.82-6.31 11.45-8.597 4.62-2.253 8.99-3.498 13.1-3.71.12 1.082.17 2.165.17 3.24z"/>
         </svg>
@@ -360,8 +362,6 @@
         </svg>
       </a>
     </div>
-    
-
   </footer>
 </body>
 </html>
